@@ -13,7 +13,22 @@
 Note, the changes for the last STABLE release start with release
 <A HREF="#2.2.5">2.2.5</A>.
 
-<b>Changes in beta release 2.3.31 (not released yet)</b>
+<b>Changes in beta release 2.3.33 (not released yet)</b>
+
+<b>Changes in beta release 2.3.32 (2001-05-04)</b>
+
+* Fixed several focus problems and several core dumps.
+
+* Again allow full words "Click", "Hold" as function specifiers
+  for backward compatibility.  Please don't use them.
+
+* New configure --enable-command-log option.
+
+* Fixed gdk-imlib configure detection for FvwmGtk.
+
+<b>Changes in beta release 2.3.31 (2001-04-07)</b>
+
+* New option "recreate" to DestroyDecor command.
 
 <b>Changes in beta release 2.3.30 (2001-03-29)</b>
 
@@ -1675,7 +1690,7 @@ pl1 to pl2
 </pre>
     <hr>
 <!-- This file automatically generated by txt2html.sh
-     on Fri Mar 30 02:16:51 IST 2001 -->
+     on Thu May 10 17:10:28 IDT 2001 -->
   </body>
 </html>
 
